Pending changes
===============

* Renaming to "Palanthir"
* Access to the raw PNG images (in 8bpp and 16bpp)
* Security: Support of SSL, HTTP Basic Authentication and interdiction
  of remote access
* Change of the licensing of the "Core/SQLite" folder to BSD (to
  reflect the original licensing terms of Chromium, from which the
  code derives)
* Standalone build for cross-compilation


Version 0.1.1 (2012/07/20)
==========================

* Fix Windows version
* Native Windows build with Microsoft Visual Studio 2005
* Add path to storage in Configuration.json


Version 0.1.0 (2012/07/19)
==========================

* Initial release